# Matrix-Theory-Assignment

./: README.md  index.html
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cpp/app/: CMakeLists.txt  generic_programming.cpp  log.cpp  lu.cpp  memory_deep_copy.cpp  memory_shallow_copy.cpp  qr.cpp  reference.cpp  svd.cpp  test-linkedlist.cpp
cpp/docs/: GenericProgramming.md
cpp/include/DataStruture/LinearList/: LinearList_base.h  LinkedList.hpp
cpp/include/utils/: color.h
docs/: matrix.tex
docs/pages/: appendix.tex  lu.tex  qr.tex
latex/: .gitignore  matrix.tex  whu-thesis.cls
latex/pages/: abstract.tex  appendix.tex  lu.tex  qr.tex  svd.tex
matlab/: lu_test.m  qr_test.m  svd_test.m
whu-thesis/: .gitignore  matrix.tex  whu-thesis.cls
whu-thesis/pages/: lu.tex
